<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logotipodepeliculas1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="284dp"
        android:layout_height="149dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaiInputLayout"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:startIconTint="#FFFCFC">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#FFFBFB" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="148dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622">

        <Button
            android:id="@+id/Iniciar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="#E60000"
            android:text="@string/Inicio" />

        <Button
            android:id="@+id/buttonResgister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DE0101"
            android:text="@string/resgitrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>