<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainResgitrar">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="319dp"
        android:layout_height="125dp"
        android:src="@drawable/logotipodepeliculas1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="396dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/editTextTextEmailAddress3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLines="1"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#FFFCFC">

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:textColorHint="#FFFEFE">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="EDAD"
                android:textAlignment="center"
                android:textColor="#EBDEDE" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Genero Favorito"
                android:textAlignment="center"
                android:textColor="#F8EBEB" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerEdad"
                android:layout_width="137dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:contentDescription="Edad"
                android:entries="@array/edad"
                android:textColor="#FFFCFC" />

            <Spinner
                android:id="@+id/SpinnerGeneroFavorito"
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/genero_favorito"
                android:entries="@array/GeneroFavorito"
                android:textColor="#FFFCFC" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:hint="@string/nombre"
            android:textColorHint="#F2EBEB">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellidos"
            android:textColorHint="#F8EFEF">

            <EditText
                android:id="@+id/editApellido"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="10"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="293dp"
        android:layout_height="28dp"
        android:buttonTint="#2D2D9B"
        android:text="@string/acepta_los_terminos_y_condiciones"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/button_Resgistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E60606"
        android:text="@string/resgitrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>